dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/libical/ical.h)

dnl Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AC_PROG_LEX
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_SUBST(AR)
AC_CHECK_PROGS(AR, ar aal, ar)

dnl Checks for libraries.
dnl Replace `main' with a function in -lical:
AC_CHECK_LIB(ical, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h time.h stdio.h sys/types.h assert.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(src/libical/Makefile src/libicalss/Makefile src/test/Makefile src/Makefile Makefile)
