dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.2)
AC_INIT(src/libical/ical.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libical,0.15a)

dnl Checks for programs.
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_YACC
AM_PROG_LEX
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_CPP
AC_PATH_PROG(RM, rm, /bin/rm)
AC_PATH_PROG(MV, mv, /bin/mv)
AC_PATH_PROG(TAR, tar, /bin/tar)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
src/libical/Makefile
src/libicalss/Makefile])
