dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/libical/ical.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libical,0.19) 

dnl Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AM_PROG_LEX
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_SUBST(AR)
AC_CHECK_PROGS(AR, ar aal, ar)

AC_DEFINE(ICAL_ERRORS_ARE_FATAL,1)
AC_DEFINE(ICAL_SAFESAVES,1)

dnl Checks for libraries.
dnl Replace `main' with a function in -lical:
dnl AC_CHECK_LIB(ical, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(time.h sys/types.h assert.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(\
src/libical/icalversion.h \
config.h \
src/libical/Makefile \
src/libicalss/Makefile \
src/libicalvcal/Makefile \
src/test/Makefile \
examples/Makefile \
src/Makefile \
design-data/Makefile \
doc/Makefile \
scripts/Makefile \
test-data/Makefile \
src/Makefile \
Makefile )
